# comps-plugins

./: .gitignore  build.sh  buildallplugins.sh  clean.sh
cbirrt2/: CMakeLists.txt  cbirrt.cpp  cbirrt.h  cbirrtmain.cpp  cbirrtparameters.h  cbirrtproblem.cpp  cbirrtproblem.h
generalik/: CMakeLists.txt  GeneralIK.cpp  GeneralIK.h
manipulation2/: CMakeLists.txt  manipulation.cpp
matlab/: SerializeTSRChain.m  activateTSRManipulators.m  makeTSR.m  makeTSRChain.m  makecbirrtcmd.m  processSupportCheckData.m  runCBiRRT.m  testTSR.m
python/: TSR.py  TransformMatrix.py  rodrigues.py
